Bug 1142408 - Add data length parameter for Register Notification Response Command. r=tzimmermann