dom/bluetooth/bluedroid/BluetoothDaemonHelpers.h
@@ -85,6 +85,37 @@ struct BluetoothAvrcpEventParamPair {
     , mParam(aParam)
   { }
 
+  size_t GetLength()
+  {
+    size_t size;
+
+    switch(mEvent) {
+      case AVRCP_EVENT_PLAY_STATUS_CHANGED:
+        /* PackPDU casts ControlPlayStatus to uint8_t */
+        size = sizeof(static_cast<uint8_t>(mParam.mPlayStatus));
+        break;
+      case AVRCP_EVENT_TRACK_CHANGE:
+        size = sizeof(mParam.mTrack);
+        break;
+      case AVRCP_EVENT_TRACK_REACHED_END:
+      case AVRCP_EVENT_TRACK_REACHED_START:
+        /* no data to pack */
+        size = 0;
+        break;
+      case AVRCP_EVENT_PLAY_POS_CHANGED:
+        size = sizeof(mParam.mSongPos);
+        break;
+      case AVRCP_EVENT_APP_SETTINGS_CHANGED:
+        size = (sizeof(mParam.mIds[0]) + sizeof(mParam.mValues[0])) * mParam.mNumAttr;
+        break;
+      default:
+        size = 0;
+        break;
+    }
+
+    return size;
+  }
+
   BluetoothAvrcpEvent mEvent;
   const BluetoothAvrcpNotificationParam& mParam;
 };
